--- a/jupyter_notebooks/Notebook_Template.ipynb
+++ b/jupyter_notebooks/Notebook_Template.ipynb
@@ -6,7 +6,7 @@
         "id": "0aStgWSO0E0E"
       },
       "source": [
-        "# **(ADD HERE THE NOTEBOOK NAME)**"
+        "# **Gym Analytic**"
       ]
     },
     {
@@ -15,21 +15,29 @@
         "id": "1eLEkw5O0ECa"
       },
       "source": [
-        "## Objectives\n",
+        "## Objectives  \n",
+        "- Develop a predictive model for gym analytics, focusing on user behavior and performance trends.  \n",
+        "- Fetch structured data from Kaggle and preprocess it for analysis.  \n",
+        "- Engineer relevant features to enhance model accuracy.  \n",
+        "- Train and evaluate a regression-based machine learning model.  \n",
+        "- Deploy the trained model via Django backend on Heroku.  \n",
         "\n",
-        "* Write here your notebook objective, for example, \"Fetch data from Kaggle and save as raw data\", or \"engineer features for modelling\"\n",
+        "## Inputs  \n",
+        "- Structured dataset from Kaggle, containing gym usage patterns and related variables.  \n",
+        "- Predefined feature selection criteria to improve model performance.  \n",
+        "- Configuration files for model training and evaluation.  \n",
         "\n",
-        "## Inputs\n",
+        "## Outputs  \n",
+        "- Cleaned and preprocessed dataset ready for modeling.  \n",
+        "- Trained regression model stored in a deployable format.  \n",
+        "- Performance metrics and visualizations of model accuracy.  \n",
+        "- API endpoint for model inference, integrated with Django backend.  \n",
         "\n",
-        "* Write here which data or information you need to run the notebook \n",
-        "\n",
-        "## Outputs\n",
-        "\n",
-        "* Write here which files, code or artefacts you generate by the end of the notebook \n",
-        "\n",
-        "## Additional Comments\n",
-        "\n",
-        "* In case you have any additional comments that don't fit in the previous bullets, please state them here. \n"
+        "## Additional Comments  \n",
+        "- Ensure the model is optimized for real-world gym analytics use cases.  \n",
+        "- Consider adding feature engineering steps to improve predictive power.  \n",
+        "- Maintain documentation for reproducibility and future improvements.  \n",
+        "\n"
       ]
     },
     {
@@ -69,12 +77,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "wZfF_j-Bz3i4",
         "outputId": "66943449-1436-4c3d-85c7-b85f9f78349b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'/workspaces/GYMChurncostumer/jupyter_notebooks'"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import os\n",
         "current_dir = os.getcwd()\n",
@@ -94,12 +113,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "TwHsQRWjz3i9",
         "outputId": "86849db3-cd2f-4cc5-ebb8-2d0caafa1a2c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "You set a new current directory\n"
+          ]
+        }
+      ],
       "source": [
         "os.chdir(os.path.dirname(current_dir))\n",
         "print(\"You set a new current directory\")"
@@ -116,12 +143,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "vz3S-_kjz3jA",
         "outputId": "00b79ae4-75d0-4a96-d193-ac9ef9847ea2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'/workspaces/GYMChurncostumer'"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "current_dir = os.getcwd()\n",
         "current_dir"
@@ -148,7 +186,16 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "objectives = {\n",
+        "    \"data_processing\": \"Load and preprocess structured data from Kaggle.\",\n",
+        "    \"feature_engineering\": \"Extract relevant features to improve model accuracy.\",\n",
+        "    \"model_training\": \"Train and evaluate a regression model for gym analytics.\",\n",
+        "    \"deployment\": \"Save and deploy the trained model via Django on Heroku.\"\n",
+        "}\n",
+        "\n",
+        "print(objectives)\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -180,7 +227,15 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "\"\"\"\n",
+        "## Inputs\n",
+        "\n",
+        "- Structured dataset from Kaggle containing gym user activity and performance metrics.\n",
+        "- API credentials or Kaggle authentication token to access the dataset.\n",
+        "- Predefined column names and data types for preprocessing.\n",
+        "\"\"\"\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -229,19 +284,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "aKlnIozA4eQO",
         "outputId": "fd09bc1f-adb1-4511-f6ce-492a6af570c0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Folder 'Gyminsights_dataset 2.csv' created successfully or already exists.\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
+        "\n",
         "try:\n",
-        "  # create here your folder\n",
-        "  # os.makedirs(name='')\n",
+        "    folder_name = \"Gyminsights_dataset 2.csv\"\n",
+        "    \n",
+        "    \n",
+        "    os.makedirs(folder_name, exist_ok=True)\n",
+        "    print(f\"Folder '{folder_name}' created successfully or already exists.\")\n",
+        "\n",
         "except Exception as e:\n",
-        "  print(e)\n"
+        "    print(f\"Error creating folder: {e}\")\n"
       ]
     }
   ],
@@ -252,11 +320,9 @@
       "provenance": [],
       "toc_visible": true
     },
-    "interpreter": {
-      "hash": "8b8334dab9339717f727a1deaf837b322d7a41c20d15cc86be99a8e69ceec8ce"
-    },
     "kernelspec": {
-      "display_name": "Python 3.8.12 64-bit ('3.8.12': pyenv)",
+      "display_name": "Python 3",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -269,7 +335,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.12 (default, Nov  7 2022, 16:45:55) \n[GCC 9.4.0]"
+      "version": "3.12.1"
     },
     "orig_nbformat": 2
   },
